[package]
name = "narqyez_shared"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
description = "A library for shared references between Narqyez projects."
documentation = "https://docs.rs/narqyez_shared"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serenity = "0.12.0"
